[240906]: JS: 일기 등록 - 등록화면 모달에서 여백 클릭 시 모달 종료 구현

--- a/01-diary/detail/detail.html
+++ b/01-diary/detail/detail.html
@@ -60,7 +60,7 @@
             </div>
         </section>
     </div>
-    <div id="HTML_write_diary_delete_select_modal_bg" class="write_diary_delete_select_modal_bg">
+    <div id="HTML_write_diary_delete_select_modal_bg" class="write_diary_delete_select_modal_bg" onclick="dismiss()">
         <div id="HTML_write_diary_delete_select_modal_container" class="write_diary_delete_select_modal_container">
             <div class="write_diary_modal_title_items">
                 <div class="write_diary_delete_select_modal_title">일기 삭제</div>
