--- a/section05/detail.html
+++ b/section05/detail.html
@@ -74,6 +74,10 @@
         </section>
       </div>
 
+      <div class="toast">
+        <p class="toast-message">복사되었습니다.</p>
+      </div>
+
       <div class="scroll-up">
         <button class="button-scroll-up" onclick="scrollToTop()"><img src="./assets/images/icon_scroll_up.svg" alt="맨 위로 이동하기" /></button>
       </div>
