feat: 로딩 스켈레톤  기능 구현

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -39,7 +39,8 @@
               </div>
             </div>
             <div>
-              <div id="photo_gallery"></div>
+              <div id="photo_gallery">
+              </div>
             </div>
           </div>
           <div id="diary_storage">
