--- a/Section6/picture.html
+++ b/Section6/picture.html
@@ -15,7 +15,7 @@
           console.log("결과:", 객체로변한결과)
           const 상자 = 객체로변한결과.message
           document.getElementById("HTML_이미지").innerHTML = 상자.map(el =>`
-          <img src="${el}" width:"50px" />
+          <img src="${el}" style = "width: 640px; height:640px; border-radius: 24px; : align-items: center;" />
           `)
       })
   })
