[240906]_section06 css 모달 토스트 등, js 모달액션 스크롤액션 사진보관함 등

--- a/depth01/myDiary_detail.html
+++ b/depth01/myDiary_detail.html
@@ -51,6 +51,28 @@
                     내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다
                     내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다
                 </div>
+                <div class="content__copy">
+                    <div class="copy__icon">
+                        <img src="../asset/icon/copy_outline_light_xs.png" />
+                    </div>
+                    <div class="copy__text">내용 복사</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container__toast">
+            <div class="toast__text">내용이 복사되었습니다.</div>
+        </div>
+
+        <div class="container__modal">
+            <div class="modal__bg"></div>
+            <div class="modal__delete">
+                <div class="delete__title">일기 삭제</div>
+                <div class="delete__desc">일기를 삭제 하시겠어요?</div>
+                <div class="delete__btn">
+                    <div class="btn__cancel2">취소</div>
+                    <div class="btn__delete2">삭제</div>
+                </div>
             </div>
         </div>
 
