--- a/index.html
+++ b/index.html
@@ -20,89 +20,107 @@
         </header>
         <main>
             <div class="tab-view bar container-picker-tab">
-                <button class="tab-view btn active">일기보관함</button>
-                <button class="tab-view btn" disabled>사진보관함</button>
+                <button id="diary-tab" class="tab-view btn active">일기보관함</button>
+                <button id="photo-tab" class="tab-view btn inactive">사진보관함</button>
             </div>
-            <div class="bar tab-view selection-tabview">
-                <select id="dropdownEmotionFilter">
-                    <option>전체</option>
-                    <option>행복해요</option>
-                    <option>슬퍼요</option>
-                    <option>놀랐어요</option>
-                    <option>화나요</option>
-                    <option>기타</option>
-                </select>
-                <button id="write-btn">작성하기</button>
-            </div>
-            <div class="flexcontainer">
-                <div class="flexchild-left"> 
-                    <ul class="diary-listview flexlist" id="diarylist"></ul>
-                    <template id="list-item-template">
-                        <li class="diary-listitem flexchild">
-                            <button class="listitem-close-btn">x</button>
-                            <a id="edit-page-anchor" class="anchor-nodeco">
-                                <div class="list-item-border">
-                                    <div class="diary-listitem-bg"></div>
-                                    <div class="diary-listitem-status">
-                                        <span id="add-emo">슬퍼요</span>
-                                        <span id="add-date">2019.03.21</span>
-                                    </div>
-                                    <div class="diary-listitem-summary">
-                                        <p id="add-title">타이틀영역입니다.한줄까지만노출됩니다</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                    </template>
+            <section class="diary-view">
+                <div class="bar tab-view selection-tabview">
+                    <select id="dropdownEmotionFilter">
+                        <option>전체</option>
+                        <option>행복해요</option>
+                        <option>슬퍼요</option>
+                        <option>놀랐어요</option>
+                        <option>화나요</option>
+                        <option>기타</option>
+                    </select>
+                    <button id="write-btn">작성하기</button>
                 </div>
-                <div class="flexchild-right">
-                    <form class="diary-util" id="adding-form">
-                        <p class="diary-util title">
-                            📍 일기 쓰기
-                        </p>
-                        <p class="diary-util subtitle">
-                            오늘 기분은 어땟나요?
-                        </p>
-                        <div class="diary-util flexlist">
-                            <label class="radio-option">
-                                <input class="radio-input" checked type="radio" name="emotion" value="happy">
-                                <p class="radio-string">행복해요</p>
+                <div class="flexcontainer">
+                    <div class="flexchild-left"> 
+                        <ul class="diary-listview flexlist" id="diarylist"></ul>
+                        <template id="list-item-template">
+                            <li class="diary-listitem flexchild">
+                                <button class="listitem-close-btn">x</button>
+                                <a id="edit-page-anchor" class="anchor-nodeco">
+                                    <div class="list-item-border">
+                                        <div class="diary-listitem-bg"></div>
+                                        <div class="diary-listitem-status">
+                                            <span id="add-emo">슬퍼요</span>
+                                            <span id="add-date">2019.03.21</span>
+                                        </div>
+                                        <div class="diary-listitem-summary">
+                                            <p id="add-title">타이틀영역입니다.한줄까지만노출됩니다</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                        </template>
+                    </div>
+                    <div class="flexchild-right">
+                        <form class="diary-util" id="adding-form">
+                            <p class="diary-util title">
+                                📍 일기 쓰기
+                            </p>
+                            <p class="diary-util subtitle">
+                                오늘 기분은 어땟나요?
+                            </p>
+                            <div class="diary-util flexlist">
+                                <label class="radio-option">
+                                    <input class="radio-input" checked type="radio" name="emotion" value="happy">
+                                    <p class="radio-string">행복해요</p>
+                                </label>
+                                <label class="radio-option">
+                                    <input class="radio-input" type="radio" name="emotion" value="sad">
+                                    <p class="radio-string">슬퍼요</p>
+                                </label>
+                                <label class="radio-option">
+                                    <input class="radio-input" type="radio" name="emotion" value="surprised">
+                                    <p class="radio-string">놀랐어요</p>
+                                </label>
+                                <label class="radio-option">
+                                    <input class="radio-input" type="radio" name="emotion" value="angry">
+                                    <p class="radio-string">화나요</p>
+                                </label>
+                                <label class="radio-option">
+                                    <input class="radio-input" type="radio" name="emotion" value="other">
+                                    <p class="radio-input-string">기타</p>
+                                </label>
+                            </div>
+                            <label class="text-field">
+                                <p class="text-input-string" id="input-title">제목</p>
+                                <input class="text-input" type="text" name="title" placeholder="제목을 입력해 주세요.">
                             </label>
-                            <label class="radio-option">
-                                <input class="radio-input" type="radio" name="emotion" value="sad">
-                                <p class="radio-string">슬퍼요</p>
+                            <label class="text-field">
+                                <p class="text-input-string" id="input-content">내용</p>
+                                <textarea class="text-input text-area" name="content" rows="5" cols="25" placeholder="내용을 입력해 주세요."></textarea>
                             </label>
-                            <label class="radio-option">
-                                <input class="radio-input" type="radio" name="emotion" value="surprised">
-                                <p class="radio-string">놀랐어요</p>
-                            </label>
-                            <label class="radio-option">
-                                <input class="radio-input" type="radio" name="emotion" value="angry">
-                                <p class="radio-string">화나요</p>
-                            </label>
-                            <label class="radio-option">
-                                <input class="radio-input" type="radio" name="emotion" value="other">
-                                <p class="radio-input-string">기타</p>
-                            </label>
-                        </div>
-                        <label class="text-field">
-                            <p class="text-input-string" id="input-title">제목</p>
-                            <input class="text-input" type="text" name="title" placeholder="제목을 입력해 주세요.">
-                        </label>
-                        <label class="text-field">
-                            <p class="text-input-string" id="input-content">내용</p>
-                            <textarea class="text-input text-area" name="content" rows="5" cols="25" placeholder="내용을 입력해 주세요."></textarea>
-                        </label>
-                        <button class="submit btn" form="adding-form">
-                            <p>등록하기</p>
-                        </button>
-                    </form>
+                            <button class="submit btn" form="adding-form">
+                                <p>등록하기</p>
+                            </button>
+                        </form>
+                    </div>
                 </div>
-            </div>
-            <div class="scroll-up-btn">
-                <p>위로 스크롤</p>
-                <i class="arrow up"></i>
-            </div>
+                <div class="scroll-up-btn">
+                    <p>위로 스크롤</p>
+                    <i class="arrow up"></i>
+                </div>
+            </section>
+            <section class="photo-view hidden">
+                <div class="bar tab-view selection-tabview">
+                    <select id="dropdownImageAspect">
+                        <option>기본형</option>
+                        <option>가로형</option>
+                        <option>세로형</option>
+                    </select>
+                </div>
+                <ul class="image-scroll-zone">
+                </ul>    
+                <template class="dog-image-template loading-lazy">
+                    <li class="dog-image-card">
+                        <img class="dog-image" loading="lazy">
+                    </li>
+                </template>
+            </section>
         </main>
         <footer>
             <div class="footer">
