✨ feat: 강아지 사진 fetch, 스켈레톤 적용

--- a/section06/index.html
+++ b/section06/index.html
@@ -234,7 +234,18 @@
                 </aside> -->
               </div>
             </div>
-            <div class="content">사진보관함입니당</div>
+            <div class="content">
+              <div class="main-content">
+                <div class="filter">
+                  <select class="filter-size">
+                    <option selected disabled>기본</option>
+                    <option>가로형</option>
+                    <option>세로형</option>
+                  </select>
+                </div>
+                <ul class="photo-list"></ul>
+              </div>
+            </div>
           </main>
         </section>
       </div>
