--- a/index.html
+++ b/index.html
@@ -5,52 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>다이어리 만들기</title>
     <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/index_mediaQuery.css">
     <script src="./javascript/index.js" defer></script>
 </head>
 <body>
     <!-- 모달 그룹 -->
     <div id="HTML_모달그룹" class="CSS_모달그룹">
-        <div class="CSS_모달배경" onclick="JS_모달닫기기능()"></div>
-        <div class="CSS_등록상자">
-            <div class="CSS_등록상자_제목">📍일기 쓰기</div>
-            <div class="CSS_라디오그룹">
-                <div class="CSS_라디오버튼">
-                    <input type="radio" name="HTML_기분선택버튼" value="행복" checked />
-                    <div>행복해요</div>
-                </div>
-                <div class="CSS_라디오버튼">
-                    <input type="radio" name="HTML_기분선택버튼" value="슬픔" />
-                    <div>슬퍼요</div>
-                </div>
-                <div class="CSS_라디오버튼">
-                    <input type="radio" name="HTML_기분선택버튼" value="놀람" />
-                    <div>놀랐어요</div>
-                </div>
-                <div class="CSS_라디오버튼">
-                    <input type="radio" name="HTML_기분선택버튼" value="화남" />
-                    <div>화나요</div>
-                </div>
-                <div class="CSS_라디오버튼">
-                    <input type="radio" name="HTML_기분선택버튼" value="기타" />
-                    <div>기타</div>
-                </div>
-            </div>
-            <div class="CSS_일기입력상자">
-                <div class="CSS_일기쓰기">
-                    <div>제목</div>
-                    <input type="text" id="HTML_제목입력창" placeholder="제목을 입력해 주세요." />
-                </div>
-                <div class="CSS_일기쓰기">
-                    <div>내용</div>
-                    <textarea id="HTML_내용입력창" rows="5" placeholder="내용을 입력해 주세요."></textarea>
-                </div>
-            </div>
-            <div class="CSS_일기쓰기버튼모음">
-                <button class="CSS_일기쓰기_등록버튼" onclick="JS_모달열기기능('HTML_등록완료모달그룹'); JS_글쓰기기능();">등록하기</button>
-                <button class="CSS_일기쓰기_닫기버튼" onclick="JS_모달열기기능('HTML_취소모달그룹')">닫기</button>
-            </div>
-        </div>
-    </div>
+      <div class="CSS_모달배경" onclick="JS_모달닫기기능()"></div>
+      <div class="CSS_등록상자">
+          <div class="CSS_등록상자_제목">📍일기 쓰기</div>
+          <div class="CSS_라디오그룹">
+              <div class="CSS_라디오버튼">
+                  <input type="radio" name="HTML_기분선택버튼" value="행복" checked />
+                  <div>행복해요</div>
+              </div>
+              <div class="CSS_라디오버튼">
+                  <input type="radio" name="HTML_기분선택버튼" value="슬픔" />
+                  <div>슬퍼요</div>
+              </div>
+              <div class="CSS_라디오버튼">
+                  <input type="radio" name="HTML_기분선택버튼" value="놀람" />
+                  <div>놀랐어요</div>
+              </div>
+              <div class="CSS_라디오버튼">
+                  <input type="radio" name="HTML_기분선택버튼" value="화남" />
+                  <div>화나요</div>
+              </div>
+              <div class="CSS_라디오버튼">
+                  <input type="radio" name="HTML_기분선택버튼" value="기타" />
+                  <div>기타</div>
+              </div>
+          </div>
+          <div class="CSS_일기입력상자">
+              <div class="CSS_일기쓰기">
+                  <div>제목</div>
+                  <input type="text" id="HTML_제목입력창" placeholder="제목을 입력해 주세요." />
+              </div>
+              <div class="CSS_일기쓰기">
+                  <div>내용</div>
+                  <textarea id="HTML_내용입력창" rows="5" placeholder="내용을 입력해 주세요."></textarea>
+              </div>
+          </div>
+          <div class="CSS_일기쓰기버튼모음">
+              <button class="CSS_일기쓰기_등록버튼" onclick="JS_모달열기기능('HTML_등록완료모달그룹'); JS_글쓰기기능();" disabled>등록하기</button>
+              <button class="CSS_일기쓰기_닫기버튼" onclick="JS_모달열기기능('HTML_취소모달그룹')">닫기</button>
+          </div>
+      </div>
+  </div>
+  
+    <!-- 삭제할지 다시묻는 모달창 -->
+    <!-- <div id="HTML_삭제재확인모달그룹" class="CSS_삭제재확인모달그룹">
+      <div id="CSS_모달배경" class="CSS_모달배경" onclick="JS_모달닫기기능('CSS_모달배경')">
+        <div class="CSS_모달삭제할지묻는그룹">
+          <button onclick="JS_모달닫기기능('CSS_모달배경')">취소하기</button>
+          <button onclick="JS_일기삭제기능()">삭제하기</button>
+        </div>      
+      </div>
+
+    </div> -->
 
     <!-- 등록완료모달그룹 -->
     <div id="HTML_등록완료모달그룹" class="CSS_모달그룹">
@@ -98,11 +110,12 @@
 
         <!-- 내비게이션 -->
         <div class="CSS_탭">
-            <div class="CSS_클릭된탭">일기보관함</div>
-            <div class="CSS_클릭되지않은탭">사진보관함</div>
+          <!-- 여기 온클릭박고 만약에 사진보관함이 클릭되면 CSS_클릭된탭으로 클래스도 바꾸고  -->
+            <div id="JS_일기보관함탭" class="CSS_클릭된탭" onclick="JS_일기보관함탭선택기능()">일기보관함</div>
+            <div id="JS_사진보관함탭" class="CSS_클릭되지않은탭" onclick="JS_사진보관함탭선택기능(); JS_강아지사진불러오는기능();">사진보관함</div>
         </div>
 
-        <div class="CSS_메인">
+        <div id="JS_메인_일기보관함" class="CSS_메인_일기보관함">
             <div class="CSS_필터랑모달묶은그룹">
                 <div class="CSS_필터_영역_배경">
                     <select class="CSS_필터" onchange="JS_필터링기능(event)">
@@ -125,6 +138,22 @@
                 <!-- 여기에 필요한 추가 콘텐츠를 추가하세요 -->
             </div>
         </div>
+
+        <!-- 이부분은 사진 보관함이고 처음은 none고 클릭되면 보여짐 -->
+
+          <div id="JS_메인_사진보관함" class="CSS_메인_사진보관함">
+            <div class="CSS_강아지필터_영역">
+              <select class="CSS_필터" id="사진사이즈선택" onchange="JS_사진사이즈선택()">
+                <option value="HTML_1대1사이즈">기본형</option>
+                <option value="HTML_4대3사이즈">가로형</option>
+                <option value="HTML_3대4사이즈">세로형</option>
+              </select>
+            </div>
+          </div>
+
+            <div id="HTML_강아지보여주는곳" class="CSS_강아지사진그룹섹션">
+              <!-- 여기에 개사진 들어옴 -->
+            </div>
 
         <!-- 플로팅 버튼 -->
         <button id="HTML_플로팅버튼" class="CSS_플로팅버튼">
