웹폰트 연결 추가

--- a/detail.html
+++ b/detail.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="./css/detail.css" />
     <link rel="stylesheet" href="./css/comment.css" />
     <link rel="stylesheet" href="./css/media.css" />
+
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
