--- a/edit.html
+++ b/edit.html
@@ -13,6 +13,13 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css"
+    />
+
     <title>Document</title>
   </head>
   <body>
