[240909] CSS&JS 마스터 과제제출

--- a/homework/note.html
+++ b/homework/note.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
 <link rel="stylesheet" href="../homework/css/style.css">
+<script src="./js/homework.js"></script>
 <head>
     <title>Note</title>
-    <script>
-        // let write = () => {
-        //     document.getElementById("title").innerText = {name}
-        // }
-    </script>
 </head>
 <body>
     <!-- <header>
         <h1>일기보관함_메인</h1>
     </header> -->
+    <!-- <div class="top_scroll" onclick="top_scroll"></div> -->
+    <button class="top_scroll" onclick="top_scroll()"></button>
     <div class="content">
         <div class="name">
             <b>민지의 다이어리</b>
@@ -42,6 +40,7 @@
             <div class="content_bg">
                 <div class="content_box">
                     <div class="content1 content_trans">
+                        <div class="diary_close"></div>
                         <div class="content_box_bg"></div>
                         <div class="content_bt">
                             <div class="emotion">
@@ -54,6 +53,7 @@
                         </div>
                     </div>
                     <div class="content2 content_trans">
+                        <div class="diary_close"></div>
                         <div class="content_box_bg"></div>
                         <div class="content_bt">
                             <div class="emotion">
@@ -66,6 +66,7 @@
                         </div>
                     </div>
                     <div class="content3 content_trans">
+                        <div class="diary_close"></div>
                         <div class="content_box_bg"></div>
                         <div class="content_bt">
                             <div class="emotion">
@@ -78,6 +79,7 @@
                         </div>
                     </div>
                     <div class="content4 content_trans">
+                        <div class="diary_close"></div>
                         <div class="content_box_bg"></div>
                         <div class="content_bt">
                             <div class="emotion">
@@ -90,6 +92,7 @@
                         </div>
                     </div>
                     <div class="content5 content_trans">
+                        <div class="diary_close"></div>
                         <div class="content_box_bg"></div>
                         <div class="content_bt">
                             <div class="emotion">
@@ -102,6 +105,7 @@
                         </div>
                     </div>
                     <div class="content6 content_trans">
+                        <div class="diary_close"></div>
                         <div class="content_box_bg"></div>
                         <div class="content_bt">
                             <div class="emotion">
