--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,7 @@
     <div class="viewTypeWrap"><div class="ratioViewType"></div></div>
     <div class="galleryListWrap ratio-1-1"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/gallery.js"></script>
   </body>
